# sb2gs

./: .env  .gitignore  README.md  gdsl.py  pyproject.toml  reporters.txt  run.ps1  statements.txt  test.sb3
examples/hundred/: Camera.gs  Icons.gs  Text.gs
hundred.out/: Camera.gs  Icons.gs  Text.gs  Thanks.gs  stage.gs
sb2gs/: __main__.py  blockdefs.py  builder.py  codegen.py  decompiler.py  header.py  sb3.py
sb2gs/res/: reporters.txt  statements.txt
src/sb2gs/: __init__.py  __main__.py  _ast.py  _logging.py  _types.py  ast.py  blocks.py  config.py  costumes.py  custom_blocks.py  decompile.py  decompile_code.py  decompile_config.py  decompile_events.py  decompile_expr.py  decompile_input.py  decompile_sprite.py  decompile_stmt.py  decompiler.py  errors.py  formatter.py  inputs.py  json_object.py  nblk.py  print.py  sb3.py  sb3_downloader.py  string_builder.py  syntax.py  types.py  utils.py  verify.py
test/: Sprite1.gs  stage.gs
tests/: run.sh
