[project]
name = "sb2gs"
version = "2.1.0"
description = "sb2gs is the goboscript decompiler."
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "rich>=14.0.0",
    "tomlkit>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sb2gs = "sb2gs:main"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false
reportPrivateUsage = false
reportPrivateImportUsage = false
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportImportCycles = false
reportImplicitStringConcatenation = false

[tool.ruff.lint]
select = ["ALL"]
extend-safe-fixes = ["ALL"]
unfixable = ["F841"]
ignore = [
    "A001",
    "A002",
    "A004",
    "ANN401",
    "COM",
    "D",
    "FBT",
    "N815",
    "PLR0911",
    "S101",
    "PLR2004",
    "S314",
    "PLC0415",
]

[dependency-groups]
dev = ["scratchattach>=2.1.15"]
